# candlerunner

./: Cargo.toml  config.yaml
frontend/: package-lock.json  package.json
frontend/src/components/: AccountCard.svelte  Accounts.svelte  Dialog.svelte  PositionManagerCard.svelte  PositionManagers.svelte  Strategies.svelte  StrategyCard.svelte
frontend/src/components/create_instance_dialog/: CreateInstanceDialog.svelte  InstrumentInput.svelte  ParamInput.svelte
frontend/src/components/instantiate_position_manager_dialog/: InstantiatePositionManagerDialog.svelte  StrategyPreview.svelte
frontend/src/models/: Account.ts  Instrument.ts  Params.ts  PositionManagerDefinition.ts  PositionManagerInstanceDefinition.ts  StrategyDefinition.ts  StrategyInstanceDefinition.ts
frontend/src/routes/: index.svelte
frontend/src/stores/: accounts_store.ts  instrument_store.ts  position_manager_store.ts  strategy_instance_store.ts  strategy_store.ts
libraries/component_store/: Cargo.toml
libraries/component_store/src/: component.rs  component_store.rs  config.rs  lib.rs  resolution.rs
libraries/periodic_component/: Cargo.toml
libraries/periodic_component/src/: lib.rs
libraries/yaml_config_provider/: Cargo.toml
libraries/yaml_config_provider/src/: lib.rs
proto/candlerunner/: candlerunner.proto
services/candlerunner/: Cargo.toml  build.rs
services/candlerunner/src/: generated.rs  main.rs
services/candlerunner/src/components/: accounts_cache.rs  instrument_cache.rs  instrument_sync.rs  mod.rs  mongo.rs  param_validator.rs  position_manager_cache.rs  position_manager_registry.rs  position_manager_runner.rs  positions_cache.rs  strategy_cache.rs  strategy_registry.rs  tinkoff_client.rs
services/candlerunner/src/components/market_data_sync/: market_data_sync.rs  mod.rs  requirements_collector.rs
services/candlerunner/src/components/strategy_runner/: candle_interpolator.rs  mod.rs  read_market_data.rs  strategy_runner.rs
services/candlerunner/src/components/tinkoff_client/: conversions.rs  interceptor.rs  mod.rs  tinkoff_client.rs  tinkoff_generic_client.rs  tinkoff_production_client.rs  tinkoff_sandbox_client.rs
services/candlerunner/src/models/: account.rs  indicator.rs  instance_id.rs  instruments.rs  market_data.rs  mod.rs  namespaces.rs  params.rs  position_manager.rs  positions.rs  strategy.rs
services/candlerunner/src/position_managers/: mod.rs  quorum_manager.rs
services/candlerunner/src/service/: error.rs  mod.rs  service.rs
services/candlerunner/src/strategies/: buy_and_hold.rs  mod.rs
services/candlerunner/src/utils/: id_generator.rs
(+4 files in other folders)
