[package]
build   = "build.rs"
edition = "2021"
name    = "candlerunner"
version = "0.1.0"

[dependencies]
anyhow               = "1.0"
clap                 = { version = "3.1", features = ["derive"] }
component_store      = { path = "../../libraries/component_store" }
prost                = "0.9"
prost-types          = "0.9"
tokio                = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic                = "0.6"
yaml_config_provider = { path = "../../libraries/yaml_config_provider" }

[build-dependencies]
tonic-build = "0.6"
