[package]
build   = "build.rs"
edition = "2021"
name    = "candlerunner"
version = "0.1.0"

[dependencies]
anyhow               = "1.0"
async-trait          = { version = "0.1" }
bson                 = { version = "2.2.0" }
chrono               = { version = "0.4", features = ["serde"] }
clap                 = { version = "3.1", features = ["derive"] }
component_store      = { path = "../../libraries/component_store" }
futures              = "0.3"
mongodb              = { version = "2.2", features = ["bson-uuid-0_8", "bson-chrono-0_4"] }
periodic_component   = { path = "../../libraries/periodic_component" }
prost                = "0.9"
prost-types          = "0.9"
serde                = { version = "1.0", features = ["derive"] }
serde_json           = "1.0"
thiserror            = "1.0"
tokio                = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic                = { version = "0.6", features = ["tls", "tls-roots"] }
uuid                 = { version = "0.8", features = ["v5"] }
warp                 = "0.3.2"
yaml_config_provider = { path = "../../libraries/yaml_config_provider" }

[build-dependencies]
tonic-build = "0.6"
